test/scc/expr/semantic-errors/118.a
118.t:3:17: error: invalid initializer